--- a/views/mbr_motorcycle_views.xml
+++ b/views/mbr_motorcycle_views.xml
@@ -5,4 +5,36 @@
     <field name="res_model">mbr.motorcycle</field>
     <field name="view_mode">tree,form</field>
   </record>
+
+  <record id="mbr_motorcycle_view_form" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.form</field>
+    <field name="model">mbr.motorcycle</field>
+    <field name="arch" type="xml">
+      <form>
+        <sheet>
+          <div class="d-block d-md-flex justify-content-between">
+            <group>
+              <field name="name"/>
+              <field name="active"/>
+            </group>
+            <field name="image" widget="image" class="oe_avatar"/>
+          </div>
+          <notebook>
+            <page string="General">
+              <group>
+                <field name="year"/>
+                <field name="current_price"/>
+                <field name="mode_id"/>
+              </group>
+            </page>
+            <page string="Description">
+              <group>
+                <field name="description"/>
+              </group>
+            </page>
+          </notebook>
+        </sheet>
+      </form>
+    </field>
+  </record>
 </odoo>
