Add extra price fields

--- a/views/mbr_motorcycle_views.xml
+++ b/views/mbr_motorcycle_views.xml
@@ -22,14 +22,20 @@
           <notebook>
             <page string="General">
               <group>
-                <field name="year"/>
-                <field name="current_price"/>
                 <field name="mode_id"/>
+                <field name="year"/>
+                <field name="license_plate"/>
                 <field name="description"/>
               </group>
             </page>
             <page string="Rental pricing">
               <field name="price_ids"/>
+            </page>
+            <page string="Extra pricing">
+              <group>
+                <field name="extra_hour_price" widget="monetary"/>
+                <field name="extra_day_price" widget="monetary"/>
+              </group>
             </page>
           </notebook>
         </sheet>
