--- a/views/mbr_motorcycle_model_views.xml
+++ b/views/mbr_motorcycle_model_views.xml
@@ -20,6 +20,7 @@
           <group>
             <field name="name"/>
             <field name="category_id"/>
+            <field name="brand_id"/>
           </group>
           <notebook>
             <page string="General">
