--- a/views/mbr_motorcycle_category_views.xml
+++ b/views/mbr_motorcycle_category_views.xml
@@ -3,6 +3,29 @@
   <record id="mbr_motorcycle_category_action" model="ir.actions.act_window">
     <field name="name">Motorcycle category</field>
     <field name="res_model">mbr.motorcycle.category</field>
-    <field name="view_mode">tree,form</field>
+    <field name="view_mode">tree,kanban,form</field>
+    <field name="help" type="html">
+      <p class="o_view_nocontent_smiling_face">
+        No data to display.
+      </p>
+    </field>
+  </record>
+
+  <record id="mbr_motorcycle_category_kanban" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.category.kanban</field>
+    <field name="model">mbr.motorcycle.category</field>
+    <field name="arch" type="xml">
+      <kanban>
+        <templates>
+          <t t-name="kanban-box">
+            <div t-attf-class="oe_kanban_card oe_kanban_global_click">
+              <div class="o_kanban_card_content">
+                <field name="name" modifiers="{'required': true}"/>
+              </div>
+            </div>
+          </t>
+        </templates>
+      </kanban>
+    </field>
   </record>
 </odoo>
