--- a/views/mbr_motorcycle_model_views.xml
+++ b/views/mbr_motorcycle_model_views.xml
@@ -3,7 +3,7 @@
   <record id="mbr_motorcycle_model_action" model="ir.actions.act_window">
     <field name="name">Motorcycle model</field>
     <field name="res_model">mbr.motorcycle.model</field>
-    <field name="view_mode">tree,form</field>
+    <field name="view_mode">tree,kanban,form</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
         No data
@@ -36,6 +36,24 @@
           </notebook>
         </sheet>
       </form>
+    </field>
+  </record>
+
+  <record id="mbr_motorcycle_model_kanban" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.model.kanban</field>
+    <field name="model">mbr.motorcycle.model</field>
+    <field name="arch" type="xml">
+      <kanban>
+        <templates>
+          <t t-name="kanban-box">
+            <div t-attf-class="oe_kanban_card oe_kanban_global_click">
+              <div class="o_kanban_card_content">
+                <field name="name" modifiers="{'required': true}"/>
+              </div>
+            </div>
+          </t>
+        </templates>
+      </kanban>
     </field>
   </record>
 </odoo>
