--- a/views/mbr_motorcycle_views.xml
+++ b/views/mbr_motorcycle_views.xml
@@ -4,6 +4,11 @@
     <field name="name">Motorbike</field>
     <field name="res_model">mbr.motorcycle</field>
     <field name="view_mode">tree,form</field>
+    <field name="help" type="html">
+      <p class="o_view_nocontent_smiling_face">
+        No data to display.
+      </p>
+    </field>
   </record>
 
   <record id="mbr_motorcycle_view_form" model="ir.ui.view">
