--- a/views/mbr_motorcycle_category_views.xml
+++ b/views/mbr_motorcycle_category_views.xml
@@ -11,6 +11,32 @@
     </field>
   </record>
 
+  <record id="mbr_motorcycle_category_view_form" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.category.form</field>
+    <field name="model">mbr.motorcycle.category</field>
+    <field name="arch" type="xml">
+      <form>
+        <sheet>
+          <group>
+            <field name="name"/>
+            <field name="description"/>
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
+
+  <record id="mbr_motorcycle_category_view_tree" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.category.tree</field>
+    <field name="model">mbr.motorcycle.category</field>
+    <field name="arch" type="xml">
+      <tree string="Motorcycle category">
+        <field name="name"/>
+        <field name="description"/>
+      </tree>
+    </field>
+  </record>
+
   <record id="mbr_motorcycle_category_kanban" model="ir.ui.view">
     <field name="name">mbr.motorcycle.category.kanban</field>
     <field name="model">mbr.motorcycle.category</field>
