--- a/views/mbr_motorcycle_model_views.xml
+++ b/views/mbr_motorcycle_model_views.xml
@@ -6,8 +6,20 @@
     <field name="view_mode">tree,kanban,form</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
-        No data
+        No data to display.
       </p>
+    </field>
+  </record>
+
+  <record id="mbr_motorcycle_model_view_tree" model="ir.ui.view">
+    <field name="name">mbr.motorcycle.model.tree</field>
+    <field name="model">mbr.motorcycle.model</field>
+    <field name="arch" type="xml">
+      <tree string="Motorcycle model">
+        <field name="name"/>
+        <field name="category_id"/>
+        <field name="brand_id"/>
+      </tree>
     </field>
   </record>
 
