Add func find motor available to select

--- a/views/mbr_rental.xml
+++ b/views/mbr_rental.xml
@@ -32,4 +32,36 @@
     </field>
   </record>
 
+  <record id="mbr_rental_view_form" model="ir.ui.view">
+    <field name="name">mbr.rental.form</field>
+    <field name="model">mbr.rental</field>
+    <field name="arch" type="xml">
+      <form>
+        <header>
+          <field name="state" widget="statusbar"/>
+        </header>
+        <sheet>
+          <group>
+            <field name="name"/>
+            <label for="date_start" string="Date Rental"/>
+            <div class="o_row">
+              <field name="date_start" widget="daterange" nolabel="1" class="oe_inline"
+                     options="{'related_end_date': 'date_end'}"/>
+              <i class="fa fa-long-arrow-right mx-2" aria-label="Arrow icon" title="Arrow"/>
+              <field name="date_end" widget="daterange" nolabel="1" class="oe_inline"
+                     options="{'related_start_date': 'date_start'}"/>
+            </div>
+            <field name="model_id"/>
+            <field name="motorcycle_id"
+                   attrs="{'invisible': [('model_id', '=', False),'|',('date_start', '=', False),'|',('date_end', '=', False)]}"/>
+            <field name="customer_id"/>
+            <field name="discount"/>
+            <field name="extra_info"/>
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
+
+
 </odoo>
